Mouse input for the Shear Operator seems wrong when zoomed in #51691

Closed
opened 2017-06-01 11:04:43 +02:00 by Sebastian Koenig · 6 comments

System Information
eOS 0.4.1, GTX 1080

Blender Version
Broken: 2.78.5, e2b1270

Short description of error
Often when I am modeling some small detail, for example the edges of window frames, I can not use the mouse to control the amount of shearing (ctrl + alt + shift +s), because it requires too much mouse travel. Entering the values (mostly it's 1 anyway) numerically works.
Shearing does work fine when used with one of the edges of the default cube, because it is large enough.
Exact steps for others to reproduce the error
Open this file: shear_input.blend
Go into edit mode of the large default cube.
Press ctrl+shift+alt+s to start the shear operator.

  • When you move the mouse now shearing works just fine.

Now leave edit-mode and select the tiny cube to the right of the large cube.
Enter edit-mode.
Zoom in to see the tiny cube better (or just press Numpad . for View Selected)
Start shearing.

  • you'd have to move the mouse several meters to achieve any reasonable shearing effect.

So it seems that the mouse input depends on some absolute world value or so. If it would depend on the current 3d window coordinates or so, mouse input might work better.

**System Information** eOS 0.4.1, GTX 1080 **Blender Version** Broken: 2.78.5, e2b1270 **Short description of error** Often when I am modeling some small detail, for example the edges of window frames, I can not use the mouse to control the amount of shearing (ctrl + alt + shift +s), because it requires too much mouse travel. Entering the values (mostly it's 1 anyway) numerically works. Shearing does work fine when used with one of the edges of the default cube, because it is large enough. **Exact steps for others to reproduce the error** Open this file: [shear_input.blend](https://archive.blender.org/developer/F615007/shear_input.blend) Go into edit mode of the large default cube. Press ctrl+shift+alt+s to start the shear operator. - > When you move the mouse now shearing works just fine. Now leave edit-mode and select the tiny cube to the right of the large cube. Enter edit-mode. Zoom in to see the tiny cube better (or just press Numpad . for View Selected) Start shearing. - > you'd have to move the mouse several meters to achieve any reasonable shearing effect. So it seems that the mouse input depends on some absolute world value or so. If it would depend on the current 3d window coordinates or so, mouse input might work better.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @bliblubli

Added subscriber: @bliblubli

I can confirm this behavior exist and is really annoying. To be consistent with all other transform operator, it should take the screenspace and not worldspace movement.

Note that the worldspace could be useful though to move the vertex on an absolute distance (in BU) instead of a percentage of the edge length though. Then, moving the mouse 0.01 BU would move the vertex 0.01 BU. It would also resolve the zoom level problem and enhance possibilities for precision modeling.

It may sound like a feature request, but in the current state it's so unusable that it can definetly be considered a bug.

I can confirm this behavior exist and is really annoying. To be consistent with all other transform operator, it should take the screenspace and not worldspace movement. Note that the worldspace could be useful though to move the vertex on an absolute distance (in BU) instead of a percentage of the edge length though. Then, moving the mouse 0.01 BU would move the vertex 0.01 BU. It would also resolve the zoom level problem and enhance possibilities for precision modeling. It may sound like a feature request, but in the current state it's so unusable that it can definetly be considered a bug.

This issue was referenced by 863f0434ec

This issue was referenced by 863f0434ecbb1dd98f35616a7e03a3c699c78663

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51691
No description provided.