Fix T51691: Shear cursor input scales w/ zoom

Use relative value from cursor movement.